json format html

--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <ul class="chat" id="chat">
-            <!-- Messages will be added here -->
-        </ul>
-    </div>
+    <div id="chat-container"></div>
+
 
     <script>
         const chatContainer = document.getElementById('chat-container');
