json format html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         .key-value {
             display: block; /* Display key-value pairs on separate lines */
         }
+        .highlight {
+            color: red;
+          }
     </style>
 </head>
 <body>
